# tj_express

./: .gitignore  Makefile  README.md  docker-compose.yaml  dockerfile  pyproject.toml
.github/workflows/: main.yml
docs/adr/: 0001-use-fastapi-and-project-structure.md  0002-final-project-features.md  0003-memory-footprint-optimization.md  0004-general-ledger-account-chart-api.md  0005-dynamic-company-directories-refactoring.md
secrets/: express_example.env
tj_express/: __main__.py  config.py  main.py
tj_express/api/: routes.py
tj_express/api/endpoints/: account.py  stock.py  tax.py
tj_express/core/: dbf.py  tax_report.py
tj_express/ui/: app.js  index.html  style.css
